<resources>
    <string name="app_name">FirstKotlinApp</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="click_me">Click me</string>
    <string name="address">Адрес:</string>
    <string name="date">Дата:</string>
    <string name="total">Итого:</string>
    <string name="discount">Сумма скидки:</string>
    <string name="number">№</string>
    <string name="title">Название товара</string>
    <string name="price">Цена</string>
    <string name="tf_discount">Скидка</string>
    <string name="tf_amount">Сумма</string>
</resources>
