<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center">

    <EditText
        android:id="@+id/username_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/middle"
        android:layout_marginHorizontal="@dimen/middle"
        android:hint="@string/name"
        tools:targetApi="o" />
    <EditText
        android:id="@+id/password_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/middle"
        android:hint="@string/password"
        tools:targetApi="o"
        android:layout_marginTop="@dimen/small"/>
    <Button
        android:id="@+id/click_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/click_me"
        android:layout_marginTop="@dimen/big"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"
        />


</LinearLayout>